// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="emotion-0"
  id="default"
>
  <div
    class=""
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.offsetBottom - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.offsetBottom"
>
  <div
    class=""
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.offsetTop - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.offsetTop"
>
  <div
    class=""
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.style - value[0] 1`] = `
.emotion-0 {
  border: 5px solid blue;
}

<div
  class="emotion-0"
  id="properties.style"
>
  <div
    class=""
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
<div
  class="emotion-0"
  id="default"
>
  <div
    class=""
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.offsetBottom - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.offsetBottom"
>
  <div
    class=""
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.offsetTop - value[0] 1`] = `
<div
  class="emotion-0"
  id="properties.offsetTop"
>
  <div
    class=""
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.style - value[0] 1`] = `
.emotion-0 {
  border: 5px solid blue;
}

<div
  class="emotion-0"
  id="properties.style"
>
  <div
    class=""
  >
    <div
      data-testid="area-content"
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.offsetBottom 1`] = `true`;

exports[`Test Schema properties.offsetBottom 2`] = `null`;

exports[`Test Schema properties.offsetTop 1`] = `true`;

exports[`Test Schema properties.offsetTop 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
